--- a/package.json
+++ b/package.json
@@ -6,17 +6,36 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
+    "date-fns": "^3.6.0",
+    "loglevel": "^1.9.1",
+    "node-polyfill-webpack-plugin": "^4.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.3.1",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "util": "^0.12.5",
+    "web-vitals": "^2.1.4",
+    "winston": "^3.13.0",
+    "winston-react": "^1.0.0-RC.0"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
     "extends": [
@@ -42,7 +61,7 @@
     "@testing-library/dom": "^10.2.0",
     "@testing-library/react": "^16.0.0",
     "babel-jest": "^29.7.0",
-    "jest": "^27.5.1",
+    "react-error-overlay": "^6.0.9",
     "react-test-renderer": "^18.3.1"
   }
 }
