--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "browserify-zlib": "^0.2.0",
     "crypto-browserify": "^3.12.0",
@@ -33,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:fix": "eslint --fix ."
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
@@ -62,6 +64,9 @@
     "@testing-library/dom": "^10.2.0",
     "@testing-library/react": "^16.0.0",
     "babel-jest": "^29.7.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "react-error-overlay": "^6.0.9",
     "react-test-renderer": "^18.3.1"
   }
