--- a/package.json
+++ b/package.json
@@ -44,7 +44,12 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "plugins": ["react-hooks"],
+    "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
+    }
   },
   "browserslist": {
     "production": [
@@ -65,8 +70,9 @@
     "@testing-library/react": "^16.0.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-fix": "^0.0.11",
     "eslint-plugin-react": "^7.34.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "react-error-overlay": "^6.0.9",
     "react-test-renderer": "^18.3.1"
   }
