--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -3,7 +3,7 @@
       "browser": true,
       "es2021": true
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react-hooks/recommended"],
+    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react-hooks/recommended", "plugin:jsx-a11y/recommended"],
     "parserOptions": {
       "ecmaVersion": 12,
       "sourceType": "module",
@@ -11,10 +11,13 @@
         "jsx": true
       }
     },
-    "plugins": ["react", "react-hooks"],
+    "plugins": ["react", "react-hooks", "jsx-a11y"],
     "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn",
+      "testing-library/no-unnecessary-act": "off",
+      "jsx-a11y/anchor-is-valid": "off"
       //add customize rules here as per your project's needs
-       "fix": true // Enables autofix for all fixable rules
+      //  "fix": 2 // Enables autofix for all fixable rules
     }
-    
 }  
